<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TreeDo</string>
    <string name="action_about">About</string>
    <string name="action_enable_backup">Enable automatic backup</string>
    <string name="action_disable_backup">Disable automatic backup</string>
    <string name="action_import">Import backup</string>
    <string name="item">Item</string>
    <string name="directory">Folder</string>
    <string name="new_item">New item</string>
    <string name="new_folder">New folder</string>
    <string name="note_deleted">Note deleted</string>
    <string name="cannot_enable_backup">Oooops, cannot enable google drive backup. Check your connectivity.</string>
    <string name="backup_enabled_successfully">Setup successful. Your notes will be backed up at regular intervals.<p>You can check the backups in your google drive account.</p></string>
    <string name="backup_disabled_successfully">Automatic backups have been disabled.</string>
    <string name="ok">OK</string>
    <string name="about"><![CDATA[<p>TreeDo, The hierarchical todo list app for control freaks.</p><p>Author: Martin Bonnin.<br><a href="http://mbonnin.net">http://mbonnin.net</a></p><p>Tree-Do name by Patou.</p><p>Tree logo derived from Tree by <a href="http://www.thenounproject.com/hy.drogu">Hysen Drogu</a>.</p>]]></string>
    <string name="select_backup">Select backup</string>
    <string name="cancel">Cancel</string>
    <string name="backup_enabling_failed">Could not enable automatic backups.</string>
    <string name="connection_needed">You must be connected to internet.</string>
    <string name="get_backup_failed">Could not get your backups. Please check your google account.</string>
    <string name="flush_database">Flush Database</string>
    <string name="action_logout">Logout</string>
    <string name="trashed">Trashed</string>
    <string name="trash">Trash</string>
    <string name="reorder">Reorder</string>
    <string name="stop_reorder">Done</string>
    <string name="listview_empty">This folder is empty.\nWhat do you want to put here ?</string>
    <string name="subfolders">Subfolders</string>
    <string name="or">or</string>
    <string name="items">Items</string>
    <string name="add">Add</string>
    <string name="create_directory">New folder</string>
    <string name="folder_name">Folder name</string>
    <string name="edit">Edit</string>
    <string name="oneItemCut">%d item cut</string>
    <string name="otherItemCut">%d items cut</string>
    <string name="oneItemTrashed">%d item moved to trash</string>
    <string name="otherItemTrashed">%d items moved to trash</string>
    <string name="oneItemCopied">%d item copied to clipboard</string>
    <string name="otherItemCopied">%d items copied to clipboard</string>
    <string name="oneItemPasted">%d item pasted</string>
    <string name="otherItemPasted">%d items pasted</string>
    <string name="cut">cut</string>
    <string name="copy">copy</string>
    <string name="paste">paste</string>
    <string name="nothingToPaste">nothing to paste</string>
    <string name="rename_folder">Rename Folder</string>
    <string name="open_trash">Open trash</string>
    <string name="need_google_play_services">You need google play services to enable backup</string>
    <string name="permission_needed">You need to grant the ACCOUNTS permissions to enable backup</string>
    <string name="backup_enabled">Backup has been enabled successfully</string>
    <string name="beer">Beer</string>
    <string name="cannot_open_backup">Impossible to open backup</string>
    <string name="backup_found">Import Backup ?</string>
    <string name="do_you_want_to_replace">Do you want to import this backup ? It will replace all your existing notes.</string>
    <string name="empty_trash">Empty trash</string>
    <string name="thank_you">Thank You !</string>
    <string name="buy_beer">Buy me a beer</string>
    <string name="buy_growler">Buy me a growler</string>
    <string name="buy_keg">Buy me a keg</string>
    <string name="add_shortcut">Add home shortcut</string>
    <string name="create_shortcut">create shortcut</string>
    <string name="shortcut_hint">Shortcut name</string>
    <string name="please_enter_a_name">Please enter a name for your shortcut</string>
    <string name="shortcut_installed">Shortcut successfully created</string>
    <string name="shorcut_name">Name</string>
    <string name="shorcut_color">Icon</string>
    <string name="add_shortcut_title">Add Shortcut</string>
    <string name="support_me">Support the development of TreeDo</string>
    <string name="node_deleted">This folder has been deleted, please update your shortcut</string>

</resources>
