<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:text="@string/add_shortcut_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:hint="@string/shortcut_hint"
        android:layout_marginBottom="15dp"
        android:id="@+id/editText"/>
    <android.support.v7.widget.RecyclerView
        android:layout_height="match_parent"
        android:layout_below="@id/editText"
        android:layout_above="@+id/button"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:id="@+id/recyclerView"
        />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:backgroundTint="@color/muted_500"
        android:textColor="#FFF"
        android:layout_alignParentBottom="true"
        android:text="@string/create_shortcut"/>

</RelativeLayout>